--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -11,15 +11,40 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {Master of computer science} % Degree
+    {ETH Zurich} % Institution
+    {Zurich} % Location
+    {Sep. 2012 - Now} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+        \item {Study track general computer science}
       \end{cvitems}
     }
+
+%---------------------------------------------------------
+
+%---------------------------------------------------------
+  \cventry
+    {Bachelor of Science in Computer Science (1.9)} % Degree
+    {Technical University Berlin} % Institution
+    {Berlin} % Location
+    {Oct. 2012 - Apr. 2016} % Date(s)
+    {
+      \begin{cvitems} % Description(s) bullet points
+        \item {Exchange program at ETH Zurich}
+        \item {Thesis: STRUCTURE-AWARE SURFACE RECONSTRUCTION WITH SPARSE MOVING LEAST SQUARES (1.0)}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+
+%---------------------------------------------------------
+  \cventry
+    {High school diploma (German Abitur 2.1)} % Degree
+    {Werner-von-Siemens Gymnasium} % Institution
+    {Berlin} % Location
+    {Mai. 2006 - Mar. 2012} % Date(s)
+    {}
 
 %---------------------------------------------------------
 \end{cventries}
