--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,17 +12,27 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Python, Node.JS, C/C++, Scala, JAVA, OCaml, LaTeX} % Skills
+    {Python, javascript (ES6), C/C++, Ruby, JAVA, VBA, LaTeX, PHP, Assembler, GLSL, Bash, Opal} % Skills
+
+  \cvskill
+    {Databases} % Category
+    {SQL, MongoDB, couchDB, pouchDB} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Web} % Category
-    {Django, Express, Koa, Redux, React, HTML5, LESS, SASS} % Skills
+    {Libaries} % Category
+    {AngularJs, Ionic, React (Native), Django, tornado, flask, Redux, React, HTML5, CSS3, Node.JS, leaflet, ros, bootstrap, jquery, Three.js, loadash, axios, yarn, boost, cgal, igl} % Skills
+    
+    
+%---------------------------------------------------------
+  \cvskill
+    {General} % Category
+    {SVG, openGL, webGL OSM, OSG, mapbox, OSRM, CAD} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {Korean, English, Japanese, Chinese} % Skills
+    {English, German, Spanish, Bulgarian} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
