--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -53,15 +53,15 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
-\name{Claud D.}{Park}
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
+\name{Alexander}{Lelidis}
+\position{Software Engineer{\enskip\cdotp\enskip}General computer scientist}
+\address{Bülachstr. 7 c, 8057 Zurich, Switzerland}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{(+41) 768286993}
+\email{alexlelidis@gmx.de}
+\homepage{www.alexus37.github.io}
+\github{alexus37}
+\linkedin{alexander-lelidis-445842b6}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -69,7 +69,7 @@
 % \reddit{reddit-id}
 % \extrainfo{extra informations}
 
-\quote{``Be the change that you want to see in the world."}
+\quote{``There are two major products that come out of Berkeley: LSD and UNIX. We don’t believe this to be a coincidence"}
 
 
 %-------------------------------------------------------------------------------
@@ -83,7 +83,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Curriculum Vitae}
+  {Alexander Lelidis~~~·~~~Curriculum Vitae}
   {\thepage}
 
 
