--- a/examples/coverletter.tex
+++ b/examples/coverletter.tex
@@ -52,24 +52,16 @@
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
-\photo[circle,noedge,left]{./examples/profile}
-\name{Claud D.}{Park}
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
+\photo[circle,noedge,left]{./profile}
+\name{Alexander}{Lelidis}
+\position{Software Engineer{\enskip\cdotp\enskip}General computer scientist}
+\address{Bülachstr. 7 c, 8057 Zurich, Switzerland}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
-% \gitlab{gitlab-id}
-% \stackoverflow{SO-id}{SO-name}
-% \twitter{@twit}
-% \skype{skype-id}
-% \reddit{reddit-id}
-% \extrainfo{extra informations}
-
-\quote{``Be the change that you want to see in the world."}
+\mobile{(+41) 768286993}
+\email{alexlelidis@gmx.de}
+\homepage{www.alexus37.github.io}
+\github{alexus37}
+\linkedin{alexander-lelidis-445842b6}
 
 
 %-------------------------------------------------------------------------------
@@ -78,12 +70,12 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Company Recruitment Team}
-  {Google Inc.\\1600 Amphitheatre Parkway\\Mountain View, CA 94043}
+  { Recruitment Team}
+  {ESRI\\Josefstrasse 218\\8005 Zurich\\Switzerland}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Software Engineer}
+\lettertitle{Software Developer – 3D Geometry (Urban Design)}
 % How the letter is opened
 \letteropening{Dear Mr./Ms./Dr. LastName,}
 % How the letter is closed
@@ -103,7 +95,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Cover Letter}
+  {Alexander Lelidis~~~·~~~Cover Letter}
   {}
 
 % Print the title with above letter informations
@@ -115,9 +107,9 @@
 \begin{cvletter}
 
 \lettersection{About Me}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
+I am Alexander Lelidis, and I’m a 4th year Computer Science student doing my masters degree here at ETH Zurich. I am interessed in computer graphics, computer vision and security. However, I am really open for other things as well. In my free time I like to ski and do art.
 
-\lettersection{Why Google?}
+\lettersection{Why Esri?}
 Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
 
 \lettersection{Why Me?}
