--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -94,11 +94,10 @@
 \input{cv/education.tex}
 \input{cv/skills.tex}
 \input{cv/experience.tex}
-\input{cv/extracurricular.tex}
-\input{cv/honors.tex}
-\input{cv/presentation.tex}
-\input{cv/writing.tex}
-\input{cv/committees.tex}
+\newpage
+
+\input{cv/projects.tex}
+\input{cv/research.tex}
 
 
 %-------------------------------------------------------------------------------
