--- a/examples/resume/projects.tex
+++ b/examples/resume/projects.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Extracurricular Activity}
+\cvsection{Projects}
 
 
 %-------------------------------------------------------------------------------
@@ -11,14 +11,13 @@
 
 %---------------------------------------------------------
   \cventry
-    {Core Member \& President at 2013} % Affiliation/role
-    {PoApper (Developers' Network of POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Jun. 2010 - Jun. 2017} % Date(s)
+    {Asteroid field simulation} % Affiliation/role
+    {C++, OSG} % Organization/group
+    {htsalexus37.github.io/asteroidField/} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
         \item {Reformed the society focusing on software engineering and building network on and off campus.}
-        \item {Proposed various marketing and network activities to raise awareness.}
       \end{cvitems}
     }
 
