--- a/examples/coverletter.tex
+++ b/examples/coverletter.tex
@@ -52,7 +52,7 @@
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
-\photo[circle,noedge,left]{./profile}
+%\photo[circle,noedge,left]{./profile}
 \name{Alexander}{Lelidis}
 \position{Software Engineer{\enskip\cdotp\enskip}General computer scientist}
 \address{Bülachstr. 7 c, 8057 Zurich, Switzerland}
@@ -77,7 +77,7 @@
 % The title of the letter
 \lettertitle{Software Developer – 3D Geometry (Urban Design)}
 % How the letter is opened
-\letteropening{Dear Mr./Ms./Dr. LastName,}
+\letteropening{Dear Recruiter,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -107,13 +107,14 @@
 \begin{cvletter}
 
 \lettersection{About Me}
-I am Alexander Lelidis, and I’m a 4th year Computer Science student doing my masters degree here at ETH Zurich. I am interessed in computer graphics, computer vision and security. However, I am really open for other things as well. In my free time I like to ski and do art.
+I am Alexander Lelidis, and I’m a 4th year Computer Science student doing my masters degree here at ETH Zurich. I am interested in computer graphics, computer vision and security. However, I am really open to other things as well. In my free time I like to ski and do art.
 
 \lettersection{Why Esri?}
-Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
+I am currently working in a small start up associated with ETH research doing geo-spaitial-analysis and visualizing big geo data. During this process I kept constantly bouncing into Esri either from the computer graphics side with the procedural cityEngine or from the geo perspective with the Esri tile layers. The connection of visual pleasing representation with big geo data created a great interest and lead me directly to Esri. 
 
 \lettersection{Why Me?}
-Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
+I have great enthusiasm for Esri and I am looking for work on great projects with a professional team. I think one of my strong suits is that I learn rather fast so adopting new workflows and methods should be done in no time.
+
 
 \end{cvletter}
 
