--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -55,8 +55,7 @@
 % \photo{./examples/profile.png}
 \name{Alexander}{Lelidis}
 \position{Software Engineer{\enskip\cdotp\enskip}General computer scientist}
-\address{Bülachstr. 7 c, 8057 Zurich, Switzerland}
-
+\address{Bülachstr. 7 c, 8057 Zurich, Switzerland\\ 31.05.1994}
 \mobile{(+41) 768286993}
 \email{alexlelidis@gmx.de}
 \homepage{www.alexus37.github.io}
