--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -17,15 +17,15 @@
     {Spring. 2016 - PRESENT} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Crowd management}
+        \item {Crowd management (angular)}
         \item {Development of command, control and communications system in react }
-        \item {GIS data analysis}
+        \item {GIS data analysis (leaflet, mapbox)}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Research Assistant at IFT} % Job title
+    {Research Assistant at IFE} % Job title
     {Undergraduate Research, Dept. of Information Technology and Electrical Engineering} % Organization
     {Zurich, Switzerland} % Location
     {Fall 2014 - Spring 2016} % Date(s)
@@ -34,7 +34,7 @@
         \item {Mobile crowd analysis }
         \item {Development of web based software for crowd analysis (js, python)}
         \item {Server implementation}
-        \item {Web design}
+        \item {Web design (HTML, CSS)}
       \end{cvitems}
     }
 
@@ -46,8 +46,8 @@
     {Fall 2012 - Spring 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Development of software civil engineering informatics (vbs, java, c++)}
-        \item {Automatisation of software quality assurance}
+        \item {Development of software civil engineering informatics (vbs, java, C++)}
+        \item {Automatisation of software quality assurance (VBA)}
         \item {Web design and marketing}
       \end{cvitems}
     }
