--- a/examples/cv/projects.tex
+++ b/examples/cv/projects.tex
@@ -27,7 +27,7 @@
     {Private}
     {tripTrackr} % Affiliation/role
      % Organization/group
-    {Rubz on rails, js, OSG} % Location
+    {Ruby on rails, js, OSG} % Location
     {https://www.triptrackr.de/} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
