--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Python, javascript (ES6), C/C++, Ruby, JAVA, VBA, LaTeX, PHP, Assembler, GLSL, Bash, Opal} % Skills
+    {\textbf{Python}, \textbf{javascript} (ES6), C/\textbf{C++}, Ruby, JAVA, VBA, LaTeX, PHP, Assembler (mios, x86), GLSL, Bash, Opal} % Skills
 
   \cvskill
     {Databases} % Category
@@ -21,7 +21,7 @@
 %---------------------------------------------------------
   \cvskill
     {Libaries} % Category
-    {AngularJs, Ionic, React (Native), Django, tornado, flask, Redux, React, HTML5, CSS3, Node.JS, leaflet, ros, bootstrap, jquery, Three.js, loadash, axios, yarn, boost, cgal, igl} % Skills
+    {AngularJs, Ionic, \textbf{React} (Native), Django, tornado, flask, \textbf{Redux}, \textbf{React}, \textbf{HTML5}, \textbf{CSS3}, Node.JS, \textbf{leaflet}, \textbf{mapbox}, ros, bootstrap, jquery, Three.js, loadash, axios, yarn, boost, cgal, igl} % Skills
     
     
 %---------------------------------------------------------
@@ -32,7 +32,7 @@
 %---------------------------------------------------------
   \cvskill
     {Languages} % Category
-    {English, German, Spanish, Bulgarian} % Skills
+    {English (Full professional proficiency) , German (native language), Spanish (4 years of high school classes), Bulgarian (basic knowledge)} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
