--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -11,10 +11,22 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Engineer, Intern} % Job title
+    {Software Engineer} % Job title
+    {ESRI} % Organization
+    {Zurich, Switzerland} % Location
+    {Spring. 2019 - PRESENT} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {ArcGIS Urban (React) }
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Software Engineer} % Job title
     {Antavi GmbH} % Organization
     {Zurich, Switzerland} % Location
-    {Spring. 2016 - PRESENT} % Date(s)
+    {Spring. 2016 - Winter 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Crowd management (angular)}
