--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -57,7 +57,7 @@
 \position{Software Engineer{\enskip\cdotp\enskip}General computer scientist}
 \address{Bülachstr. 7 c, 8057 Zurich, Switzerland\\ 31.05.1994}
 \mobile{(+41) 768286993}
-\email{alexlelidis@gmx.de}
+\email{alex.lexus.info@gmail.com}
 \homepage{www.alexus37.github.io}
 \github{alexus37}
 \linkedin{alexander-lelidis-445842b6}
