--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -18,6 +18,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {ArcGIS Urban (React) }
+        \item {Telemetry gathering with redshift and metabase}
       \end{cvitems}
     }
 
