--- a/examples/cv/projects.tex
+++ b/examples/cv/projects.tex
@@ -1,11 +1,11 @@
 %-------------------------------------------------------------------------------
-%	SECTION TITLE
+% SECTION TITLE
 %-------------------------------------------------------------------------------
 \cvsection{Projects}
 
 
 %-------------------------------------------------------------------------------
-%	CONTENT
+% CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
@@ -18,7 +18,7 @@
     {https://alexus37.github.io/asteroidField/} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Simulating planets and asteroids in space is an intersecting multi dimensional challenge. Due to the nature of the set up, we have to solve a few hard challenges to achieve a real time engine. The first part of the problem is the numerical computation of gravitational forces. This problem is today only solved analytically for 2 bodies. Since our objective is to have an asteroid field we using numerical methods to approximated these forces. Once the bodies start to move around the second challenge is to handle collisions and compute physically correct responses. Again this needs to be done in rather fast fashion to be able to run in real time.}
+        \item {Simulating planets and asteroids in space is an intersecting multi-dimensional challenge. Due to the nature of the setup, we have to solve a few hard challenges to achieve a real-time engine. The first part of the problem is the numerical computation of gravitational forces. This problem is today only solved analytically for 2 bodies. Since our objective is to have an asteroid field we using numerical methods to approximated these forces. Once the bodies start to move around the second challenge is to handle collisions and compute physically correct responses. Again this needs to be done in rather fast fashion to be able to run in real-time.}
       \end{cvitems}
     }
 
@@ -32,11 +32,11 @@
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
         \item {
-The motivation behinde this project was to understand the full stack developement of an app with including backend. Therefore I choose to create a travel app, where users can create a personal webpage with the travel trajectory and share it with friends.
+The motivation behind this project was to understand the full-stack development of an app with including backend. Therefore I choose to create a travel app, where users can create a personal webpage with the travel trajectory and share it with friends.
         }
       \end{cvitems}
     }
-    
+
     %---------------------------------------------------------
   \cventry
     {Private}
@@ -47,11 +47,11 @@ The motivation behinde this project was to understand the full stack developemen
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
         \item {
-        SNori Webinterface is a web platform, functioning as a frontend for the Nori Raytracer. It features a user management system, allowing users to save and load scenes, which they can edit in a 3D editor in the browser. Scenes can then be renderd by the platform and will be streamed, piece by piece to the browser. The server uses Django to provide a REST API which is used by an Angular Web App. THREE.js is used for the 3D Editor. The rendered image is streamed to piece by piece via a Websocket.
+        Nori Web interface is a web platform, functioning as a frontend for the Nori Raytracer. It features a user management system, allowing users to save and load scenes, which they can edit in a 3D editor in the browser. Scenes can then be rendered by the platform and will be streamed, piece by piece to the browser. The server uses Django to provide a REST API which is used by an Angular Web App. THREE.js is used for the 3D Editor. The rendered image is streamed to piece by piece via a Websocket.
         }
       \end{cvitems}
     }
-    
+
     %---------------------------------------------------------
   \cventry
     {University}
