--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,22 +12,22 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {\textbf{Python}, \textbf{javascript} (ES6), C/\textbf{C++}, Ruby, JAVA, VBA, LaTeX, PHP, Assembler (mios, x86), GLSL, Bash, Opal} % Skills
+    {\textbf{Python}, \textbf{javascript} (ES6), TS, C/\textbf{C++}, Ruby, JAVA, VBA, LaTeX, PHP, Assembler (mios, x86), GLSL, Bash, Opal} % Skills
 
   \cvskill
     {Databases} % Category
-    {SQL, MongoDB, couchDB, pouchDB} % Skills
+    {SQL, MongoDB, couchDB, pouchDB, postgres} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Libaries} % Category
     {AngularJs, Ionic, \textbf{React} (Native), Django, tornado, flask, \textbf{Redux}, \textbf{React}, \textbf{HTML5}, \textbf{CSS3}, Node.JS, \textbf{leaflet}, \textbf{mapbox}, ros, bootstrap, jquery, Three.js, loadash, axios, yarn, boost, cgal, igl} % Skills
-    
-    
+
+
 %---------------------------------------------------------
   \cvskill
     {General} % Category
-    {SVG, openGL, webGL OSM, OSG, mapbox, OSRM, CAD} % Skills
+    {SVG, openGL, webGL OSM, OSG, mapbox, OSRM, CAD, ESRI AGO, Metabase} % Skills
 
 %---------------------------------------------------------
   \cvskill
