add master thesis to cv

--- a/examples/cv/research.tex
+++ b/examples/cv/research.tex
@@ -9,6 +9,30 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
+  %---------------------------------------------------------
+  \cventry
+    {Master thesis} % Role
+    {Invisible to Machine Perception: Attacking Pose Estimators with Attribution Methods} % Event
+    {Zurich, Switzerland} % Location
+    {Mai. 2020} % Date(s)
+    {
+      \begin{cvitems} % Description(s)
+        \item {
+          Neural networks are currently the most accurate techniques to tackle computer vision problems.
+          However, with the increase of accuracy, an increase in complexity has emerged leading to black-
+          box systems. This is especially problematic in safety-critical situations. In this thesis, we are
+          using various attribution methods in 2D or 3D to understand a human pose estimation model.
+          During this process, we develop a new method for the 3D attribution case, called 3D Saliency
+          map.
+          To test the robustness of this model we identify adversarial examples in 2D and propose a new
+          method in the 3D domain for computing adversarial texture for clothing. We show that our
+          approach works by rendering a video of simulated meshes with and without the adversarial
+          texture and feeding into the human pose estimator. To quantify the results we develop three
+          different metrics, measuring various aspects of the attacks.
+        }
+      \end{cvitems}
+    }
+
 %---------------------------------------------------------
   \cventry
     {Big Data and Smart Computing (BigComp), 2016 International Conference} % Role
@@ -18,7 +42,7 @@
     {
       \begin{cvitems} % Description(s)
         \item {
-			In this paper, we present an exploration of analyzing geometries via learning local geometry features. After extracting local geometry patches, we parameterize each patch geometry by a radial basis function based interpolation. We use the resulting coefficients as discrete representations of the patches. These are then fed into feature learning algorithms to extract the dominant components explaining the overall patch database. This simple approach allows us to handle general representations such as point clouds or meshes with noises, outliers, and missing data. We present features learned on several patch databases, highlighting the utility of such an analysis for geometry processing applications.        
+			In this paper, we present an exploration of analyzing geometries via learning local geometry features. After extracting local geometry patches, we parameterize each patch geometry by a radial basis function based interpolation. We use the resulting coefficients as discrete representations of the patches. These are then fed into feature learning algorithms to extract the dominant components explaining the overall patch database. This simple approach allows us to handle general representations such as point clouds or meshes with noises, outliers, and missing data. We present features learned on several patch databases, highlighting the utility of such an analysis for geometry processing applications.
         }
       \end{cvitems}
     }
