update cv with master

--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -14,10 +14,11 @@
     {Master of computer science} % Degree
     {ETH Zurich} % Institution
     {Zurich} % Location
-    {Sep. 2017 - Now} % Date(s)
+    {Sep. 2017 - Sep. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Study track general computer science}
+        \item {Thesis: Invisible to Machine Perception: Attacking Pose Estimators with Attribution Methods (1.3)}
       \end{cvitems}
     }
 
@@ -32,7 +33,7 @@
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Exchange program at ETH Zurich}
-        \item {Thesis: STRUCTURE-AWARE SURFACE RECONSTRUCTION WITH SPARSE MOVING LEAST SQUARES (1.0)}
+        \item {Thesis: Structure-aware Surface Reconstruction with Sparse Moving Least Squares (1.0)}
       \end{cvitems}
     }
 
