--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -14,7 +14,7 @@
     {Software Engineer} % Job title
     {ESRI} % Organization
     {Zurich, Switzerland} % Location
-    {Spring. 2019 - PRESENT} % Date(s)
+    {Spring. 2019 - Fall 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {ArcGIS Urban (React) }
