--- a/examples/cv/research.tex
+++ b/examples/cv/research.tex
@@ -50,7 +50,7 @@
 %---------------------------------------------------------
   \cventry
     {Bachelor thesis} % Role
-    {STRUCTURE-AWARE SURFACE RECONSTRUCTION WITH SPARSE MOVING LEAST SQUARES} % Event
+    {Structure-aware Surface Reconstruction with Sparse Moving Least Squares} % Event
     {Zurich, Switzerland} % Location
     {Aug. 2015} % Date(s)
     {
