add better work experience description

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -1,18 +1,3 @@
-%!TEX TS-program = xelatex
-%!TEX encoding = UTF-8 Unicode
-% Awesome CV LaTeX Template for CV/Resume
-%
-% This template has been downloaded from:
-% https://github.com/posquit0/Awesome-CV
-%
-% Author:
-% Claud D. Park <posquit0.bj@gmail.com>
-% http://www.posquit0.com
-%
-% Template license:
-% CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
-%
-
 
 %-------------------------------------------------------------------------------
 % CONFIGURATIONS
@@ -54,7 +39,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo{./examples/profile.png}
 \name{Alexander}{Lelidis}
-\position{Software Engineer{\enskip\cdotp\enskip}General computer scientist}
+\position{Software Engineer{\enskip\cdotp\enskip} Researcher {\enskip\cdotp\enskip}General computer scientist}
 \address{Bülachstr. 7 c, 8057 Zurich, Switzerland\\ 31.05.1994}
 \mobile{(+41) 768286993}
 \email{alex.lexus.info@gmail.com}
