--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Experience}
+\cvsection{Work experience}
 
 
 %-------------------------------------------------------------------------------
@@ -17,8 +17,9 @@
     {Spring. 2019 - Fall 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {ArcGIS Urban (React) }
-        \item {Telemetry gathering with redshift and metabase}
+        \item {Development of urban planing software in the 3D space in the browser using React and the ESRI Js Api}
+        \item {Research, design and implementation of streetview integration in ARCGis Urban resulting in two opensource packets on NPM}
+        \item {Planning and execution of telemetry gathering using AWS-Redshift and Metabase increasing user feedback}
       \end{cvitems}
     }
 
@@ -30,9 +31,9 @@
     {Spring. 2016 - Winter 2018} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Crowd management (angular)}
-        \item {Development of command, control and communications system in react }
-        \item {GIS data analysis (leaflet, mapbox)}
+        \item {Design and development of command, control and communication systems in React with live updates via pouchdb}
+        \item {Scalable Backend and Api design in Express running on AWS}
+        \item {Processing and visualization of raw GIS data analysis using Mapbox and OSRM}
       \end{cvitems}
     }
 
@@ -44,10 +45,9 @@
     {Fall 2014 - Spring 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Mobile crowd analysis }
-        \item {Development of web based software for crowd analysis (js, python)}
-        \item {Server implementation}
-        \item {Web design (HTML, CSS)}
+        \item {Getting insights of big mobile crowd GPS data through implementation of trajectory analysis in Python}
+        \item {Visualization of complex relations by creating web based software for crowd analysis in Js}
+        \item {Research and development of new analysis methods using GPS data to provide crowd flow direction estimates}
       \end{cvitems}
     }
 
@@ -59,9 +59,9 @@
     {Fall 2012 - Spring 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Development of software civil engineering informatics (vbs, java, C++)}
-        \item {Automatisation of software quality assurance (VBA)}
-        \item {Web design and marketing}
+        \item {Development of software civil engineering tools in Java and C++}
+        \item {Reducing software quality assurance time by implementing continues integration tests with Selenium}
+        \item {Teaching training courses for the utilisation of the company's products to new clients}
       \end{cvitems}
     }
 
