--- a/examples/cv/skills.tex
+++ b/examples/cv/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {\textbf{Python}, \textbf{javascript} (ES6), TS, C/\textbf{C++}, Ruby, JAVA, VBA, LaTeX, PHP, Assembler (mios, x86), GLSL, Bash, Opal} % Skills
+    {\textbf{Python}, \textbf{javascript} (ES6), TS, C/\textbf{C++}, Ruby, JAVA, PHP, Assembler (mios, x86), GLSL, Bash} % Skills
 
   \cvskill
     {Databases} % Category
@@ -21,7 +21,7 @@
 %---------------------------------------------------------
   \cvskill
     {Libaries} % Category
-    {AngularJs, Ionic, \textbf{React} (Native), Django, tornado, flask, \textbf{Redux}, \textbf{React}, \textbf{HTML5}, \textbf{CSS3}, Node.JS, \textbf{leaflet}, \textbf{mapbox}, ros, bootstrap, jquery, Three.js, loadash, axios, yarn, boost, cgal, igl} % Skills
+    {\textbf{PyTorch}, \textbf{Tensorflow}, \textbf{React} (Native), Django, tornado, flask, angular, \textbf{Redux}, \textbf{HTML5}, \textbf{CSS3}, Node.JS, \textbf{leaflet}, \textbf{mapbox}, ros, bootstrap, jquery, Three.js, loadash,  boost, cgal, igl} % Skills
 
 
 %---------------------------------------------------------
