--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -26,7 +26,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Bachelor of Science in Computer Science (1.9)} % Degree
+    {Bachelor of Computer Science (1.9)} % Degree
     {Technical University Berlin} % Institution
     {Berlin} % Location
     {Oct. 2012 - Apr. 2016} % Date(s)
