refactor research and projects

--- a/examples/cv.tex
+++ b/examples/cv.tex
@@ -53,7 +53,7 @@
 % \reddit{reddit-id}
 % \extrainfo{extra informations}
 
-\quote{``There are two major products that come out of Berkeley: LSD and UNIX. We don’t believe this to be a coincidence"}
+\quote{``There are two major products that come out of Berkeley: LSD and UNIX. We don’t believe this to be a coincidence" \\ Jeremy S. Anderson}
 
 
 %-------------------------------------------------------------------------------
@@ -75,13 +75,13 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{cv/education.tex}
 \input{cv/skills.tex}
 \input{cv/experience.tex}
+\input{cv/education.tex}
 \newpage
 
-\input{cv/projects.tex}
 \input{cv/research.tex}
+\input{cv/projects.tex}
 
 
 %-------------------------------------------------------------------------------
