--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -11,14 +11,13 @@
 
 %---------------------------------------------------------
   \cventry
-    {Master of computer science} % Degree
+    {Master of computer science (1.3)} % Degree
     {ETH Zurich} % Institution
     {Zurich} % Location
     {Sep. 2017 - Sep. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Study track general computer science}
-        \item {Thesis: Invisible to Machine Perception: Attacking Pose Estimators with Attribution Methods (1.3)}
+        \item {Focus: Machine Learning and Security}
       \end{cvitems}
     }
 
@@ -33,7 +32,7 @@
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Exchange program at ETH Zurich}
-        \item {Thesis: Structure-aware Surface Reconstruction with Sparse Moving Least Squares (1.0)}
+        \item {Focus: Computer Graphics and Computer Vision}
       \end{cvitems}
     }
 
