--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -17,8 +17,8 @@
     {Spring. 2019 - Fall 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Development of urban planing software in the 3D space in the browser using React and the ESRI Js Api}
-        \item {Research, design and implementation of streetview integration in ARCGis Urban resulting in two opensource packets on NPM}
+        \item {Development of urban planning software in the 3D space in the browser using React and the ESRI Js API}
+        \item {Research, design and implementation of streetview integration in ARCGis Urban resulting in two opensource packages on NPM}
         \item {Planning and execution of telemetry gathering using AWS-Redshift and Metabase increasing user feedback}
       \end{cvitems}
     }
@@ -32,7 +32,7 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Design and development of command, control and communication systems in React with live updates via pouchdb}
-        \item {Scalable Backend and Api design in Express running on AWS}
+        \item {Scalable Backend and API design in Express running on AWS}
         \item {Processing and visualization of raw GIS data analysis using Mapbox and OSRM}
       \end{cvitems}
     }
@@ -45,8 +45,8 @@
     {Fall 2014 - Spring 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Getting insights of big mobile crowd GPS data through implementation of trajectory analysis in Python}
-        \item {Visualization of complex relations by creating web based software for crowd analysis in Js}
+        \item {Getting insights of big mobile crowd GPS data through the implementation of trajectory analysis in Python}
+        \item {Visualization of complex relations by creating web-based software for crowd analysis in Js}
         \item {Research and development of new analysis methods using GPS data to provide crowd flow direction estimates}
       \end{cvitems}
     }
