add thesis info

--- a/examples/cv/education.tex
+++ b/examples/cv/education.tex
@@ -17,6 +17,7 @@
     {Sep. 2017 - Sep. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
+        \item {Joint Thesis with the University of Cambridge}
         \item {Focus: Machine Learning and Security}
       \end{cvitems}
     }
