--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -8,6 +8,18 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cventries}
+  %---------------------------------------------------------
+  \cventry
+    {Research Assistant at CGL/Disney} % Job title
+    {ETH Zurich} % Organization
+    {Zurich, Switzerland} % Location
+    {Fall. 2020 - now} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Development of production-level deep learning code in collaboration with Disney.}
+        \item {Research of smoke stylization method and develop of a Houdini plugin for neural smoke processing.}
+      \end{cvitems}
+    }
 
 %---------------------------------------------------------
   \cventry
