--- a/examples/cv/experience.tex
+++ b/examples/cv/experience.tex
@@ -11,7 +11,7 @@
   %---------------------------------------------------------
   \cventry
     {Research Assistant at CGL/Disney} % Job title
-    {ETH Zurich} % Organization
+    {ETH Zurich / Disney Research Studios} % Organization
     {Zurich, Switzerland} % Location
     {Fall. 2020 - now} % Date(s)
     {
